--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,4 +30,5 @@ dependencies {
     compile 'com.android.support:support-v4:25.3.1'
     compile 'org.jsoup:jsoup:1.10.2'
     testCompile 'junit:junit:4.12'
+    compile 'com.android.support:cardview-v7:25.3.1'
 }
